New Crowdin updates (#31)
* New translations spark_strings.xml (Romanian)

* New translations spark_strings.xml (French)

* New translations spark_strings.xml (Spanish)

* New translations spark_strings.xml (Arabic)

* New translations spark_strings.xml (German)

* New translations spark_strings.xml (Greek)

* New translations spark_strings.xml (Italian)

* New translations spark_strings.xml (Japanese)

* New translations spark_strings.xml (Polish)

* New translations spark_strings.xml (Portuguese)

* New translations spark_strings.xml (Russian)

* New translations spark_strings.xml (Slovak)

* New translations spark_strings.xml (Turkish)

* New translations spark_strings.xml (Chinese Simplified)

* New translations spark_strings.xml (Portuguese, Brazilian)

* New translations spark_strings.xml (Indonesian)

* New translations spark_strings.xml (Persian)

* New translations spark_strings.xml (Bengali)

* New translations spark_strings.xml (Hindi)

* New translations spark_strings.xml (Romanian)

* New translations spark_strings.xml (French)

* New translations spark_strings.xml (Spanish)

* New translations spark_strings.xml (Arabic)

* New translations spark_strings.xml (German)

* New translations spark_strings.xml (Greek)

* New translations spark_strings.xml (Italian)

* New translations spark_strings.xml (Japanese)

* New translations spark_strings.xml (Polish)

* New translations spark_strings.xml (Portuguese)

* New translations spark_strings.xml (Russian)

* New translations spark_strings.xml (Slovak)

* New translations spark_strings.xml (Turkish)

* New translations spark_strings.xml (Chinese Simplified)

* New translations spark_strings.xml (Portuguese, Brazilian)

* New translations spark_strings.xml (Indonesian)

* New translations spark_strings.xml (Persian)

* New translations spark_strings.xml (Bengali)

* New translations spark_strings.xml (Hindi)

--- a/core/res/res/values-it-rIT/spark_strings.xml
+++ b/core/res/res/values-it-rIT/spark_strings.xml
@@ -61,4 +61,8 @@
     <string name="aerr_show_details">Mostra dettagli</string>
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
+    <!-- App lock -->
+    <string name="unlock_application">Sblocca <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
+    <!-- Face unlock -->
+    <string name="face_unlock_disabled_idle">Sblocco facciale disabilitato a causa dell\'inattività</string>
 </resources>
