--- a/core/res/res/values-es-rES/spark_strings.xml
+++ b/core/res/res/values-es-rES/spark_strings.xml
@@ -61,4 +61,8 @@
     <string name="aerr_show_details">Mostrar detalles</string>
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
+    <!-- App lock -->
+    <string name="unlock_application">Desbloquear <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
+    <!-- Face unlock -->
+    <string name="face_unlock_disabled_idle">Desbloqueo facial deshabilitado por inactividad</string>
 </resources>
