--- a/core/res/res/values-fa-rIR/spark_strings.xml
+++ b/core/res/res/values-fa-rIR/spark_strings.xml
@@ -16,7 +16,7 @@
     <!-- Button that copies the url to the log of a crashed application -->
     <string name="aerr_copy">کپی کردن لینک گزارش خرابی</string>
     <string name="url_copy_success">آدرس با موفقیت کپی شد</string>
-    <string name="url_copy_failed">An error occured while uploading the log to hastebin</string>
+    <string name="url_copy_failed">مشکلی در حین آپلود کردن گزارش به hastebin رخداد</string>
     <!-- SystemUI Restart -->
     <string name="systemui_restart_title">رابط کاربری نیازمندِ راه‌اندازی مجدد است</string>
     <string name="systemui_restart_message">برای اعمال کامل تغییرات باید رابط کاربری سیستم ریست شود، آیا مایلید هم‌اکنون دستگاه ریست شود؟</string>
@@ -58,7 +58,11 @@
     <!-- Aerr strings -->
     <string name="aerr_disable">غیرفعال کردن برنامه</string>
     <!-- Button that opens the screen with details of an application error -->
-    <string name="aerr_show_details">Show details</string>
+    <string name="aerr_show_details">نمایش جزئیات</string>
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
+    <!-- App lock -->
+    <string name="unlock_application">Unlock <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
+    <!-- Face unlock -->
+    <string name="face_unlock_disabled_idle">بازگشایی قفل با چهره به دلیل عدم حرکت، غیرفعال شد</string>
 </resources>
