--- a/core/res/res/values-in-rID/spark_strings.xml
+++ b/core/res/res/values-in-rID/spark_strings.xml
@@ -16,7 +16,7 @@
     <!-- Button that copies the url to the log of a crashed application -->
     <string name="aerr_copy">Salin URL log kerusakan</string>
     <string name="url_copy_success">URL berhasil disalin</string>
-    <string name="url_copy_failed">An error occured while uploading the log to hastebin</string>
+    <string name="url_copy_failed">Terjadi kesalahan saat mengunggah log ke hastebin</string>
     <!-- SystemUI Restart -->
     <string name="systemui_restart_title">Mulai ulang SistemUI diperlukan</string>
     <string name="systemui_restart_message">Untuk melihat semua perubahan, diperlukan memulai ulang SistemUI. Mulai ulang sekarang?</string>
@@ -58,7 +58,11 @@
     <!-- Aerr strings -->
     <string name="aerr_disable">Nonaktifkan aplikasi</string>
     <!-- Button that opens the screen with details of an application error -->
-    <string name="aerr_show_details">Show details</string>
+    <string name="aerr_show_details">Tampilkan rincian</string>
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
+    <!-- App lock -->
+    <string name="unlock_application">Buka <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
+    <!-- Face unlock -->
+    <string name="face_unlock_disabled_idle">Face unlock dinonaktifkan karena tidak aktif</string>
 </resources>
