--- a/core/res/res/values-ja-rJP/spark_strings.xml
+++ b/core/res/res/values-ja-rJP/spark_strings.xml
@@ -5,7 +5,7 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Cycle through ringer modes -->
-    <string name="volume_dialog_ringer_guidance_normal">通話と通知をの音が出ます</string>
+    <string name="volume_dialog_ringer_guidance_normal">通話と通知の音が出ます</string>
     <!-- Advanced reboot -->
     <string name="reboot_to_recovery_title">リカバリー</string>
     <string name="reboot_to_recovery_message">リカバリーへ再起動中...</string>
@@ -16,7 +16,7 @@
     <!-- Button that copies the url to the log of a crashed application -->
     <string name="aerr_copy">クラッシュログ URL をコピー</string>
     <string name="url_copy_success">URL を正常にコピーしました</string>
-    <string name="url_copy_failed">An error occured while uploading the log to hastebin</string>
+    <string name="url_copy_failed">hastebin へのログのアップロード中にエラーが発生しました</string>
     <!-- SystemUI Restart -->
     <string name="systemui_restart_title">システム UI の再起動が必要です</string>
     <string name="systemui_restart_message">全ての変更を反映するにはシステム UI の再起動が必要です。再起動しますか?</string>
@@ -58,7 +58,11 @@
     <!-- Aerr strings -->
     <string name="aerr_disable">アプリを無効化</string>
     <!-- Button that opens the screen with details of an application error -->
-    <string name="aerr_show_details">Show details</string>
+    <string name="aerr_show_details">詳細を表示</string>
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
+    <!-- App lock -->
+    <string name="unlock_application">Unlock <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
+    <!-- Face unlock -->
+    <string name="face_unlock_disabled_idle">Face unlock disabled due to inactivity</string>
 </resources>
