--- a/core/res/res/values-pt-rBR/spark_strings.xml
+++ b/core/res/res/values-pt-rBR/spark_strings.xml
@@ -16,7 +16,7 @@
     <!-- Button that copies the url to the log of a crashed application -->
     <string name="aerr_copy">Copiar URL do registro de falhas</string>
     <string name="url_copy_success">URL copiado com sucesso</string>
-    <string name="url_copy_failed">An error occured while uploading the log to hastebin</string>
+    <string name="url_copy_failed">Ocorreu um erro durante o envio do log para o hastebin</string>
     <!-- SystemUI Restart -->
     <string name="systemui_restart_title">Necessário reiniciar a interface do sistema</string>
     <string name="systemui_restart_message">Para que todas as alterações tenham efeito, é necessário reiniciar a interface do sistema. Deseja reiniciar a interface do sistema agora?</string>
@@ -58,7 +58,11 @@
     <!-- Aerr strings -->
     <string name="aerr_disable">Desativar aplicativo</string>
     <!-- Button that opens the screen with details of an application error -->
-    <string name="aerr_show_details">Show details</string>
+    <string name="aerr_show_details">Mostrar detalhes</string>
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
+    <!-- App lock -->
+    <string name="unlock_application">Unlock <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
+    <!-- Face unlock -->
+    <string name="face_unlock_disabled_idle">Face unlock disabled due to inactivity</string>
 </resources>
