--- a/core/res/res/values-ro-rRO/spark_strings.xml
+++ b/core/res/res/values-ro-rRO/spark_strings.xml
@@ -8,18 +8,18 @@
     <string name="volume_dialog_ringer_guidance_normal">Apelurile și notificările vor suna</string>
     <!-- Advanced reboot -->
     <string name="reboot_to_recovery_title">Recuperare</string>
-    <string name="reboot_to_recovery_message">Rebooting to recovery</string>
+    <string name="reboot_to_recovery_message">Repornire în Recuperare</string>
     <string name="reboot_to_bootloader_title">Bootloader</string>
-    <string name="reboot_to_bootloader_message">Rebooting to bootloader</string>
+    <string name="reboot_to_bootloader_message">Repornire în bootloader</string>
     <string name="reboot_title">Repornire</string>
     <string name="reboot_message">Repornire sistem</string>
     <!-- Button that copies the url to the log of a crashed application -->
     <string name="aerr_copy">Copiază URL-ul jurnalului de eroare</string>
     <string name="url_copy_success">Adresă URL copiată cu succes</string>
-    <string name="url_copy_failed">An error occured while uploading the log to hastebin</string>
+    <string name="url_copy_failed">A apărut o eroare la încărcarea jurnalului în hastebin</string>
     <!-- SystemUI Restart -->
-    <string name="systemui_restart_title">SystemUI restart required</string>
-    <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
+    <string name="systemui_restart_title">Este necesară repornirea interfeței sistemului</string>
+    <string name="systemui_restart_message">Pentru ca toate modificările să aibă efect, este necesară o repornire a interfeței sistemului. Reporniți interfața de sistem acum?</string>
     <!-- Pocket Lock -->
     <string name="pocket_lock_message_long_press">Apăsați și țineți apăsat butonul de alimentare pentru a debloca</string>
     <string name="pocket_view_title">Modul buzunar este pornit</string>
@@ -29,36 +29,40 @@
     <string name="pocket_view_top_tag_number1">1.\u0020</string>
     <string name="pocket_view_top_tag_number2">2.\u0020</string>
     <!-- LiveDisplay strings -->
-    <string name="live_display_auto">Automatic</string>
-    <string name="live_display_auto_summary">Automatically adjust color temperature of screen after sunset and sunrise</string>
+    <string name="live_display_auto">Automat</string>
+    <string name="live_display_auto_summary">Reglează automat temperatura culorii ecranului în funcție de apus și răsărit</string>
     <string name="live_display_off">Dezactivată</string>
-    <string name="live_display_off_summary">Disable all adjustments</string>
-    <string name="live_display_day">Day</string>
-    <string name="live_display_day_summary">Use day settings only</string>
-    <string name="live_display_night">Night</string>
-    <string name="live_display_night_summary">Use night settings only</string>
-    <string name="live_display_outdoor">Outdoor (bright sun)</string>
-    <string name="live_display_outdoor_summary">Use outdoor settings only</string>
-    <string name="live_display_hint">LiveDisplay can help reduce eyestrain and help you sleep at night. Click here to try it out!</string>
-    <string name="accessibility_quick_settings_live_display_off">LiveDisplay off.</string>
-    <string name="accessibility_quick_settings_live_display_auto">LiveDisplay: auto mode.</string>
-    <string name="accessibility_quick_settings_live_display_day">LiveDisplay: day mode.</string>
-    <string name="accessibility_quick_settings_live_display_night">LiveDisplay: night mode.</string>
-    <string name="accessibility_quick_settings_live_display_outdoor">LiveDisplay: outdoor mode.</string>
-    <string name="accessibility_quick_settings_live_display_changed_off">LiveDisplay turned off.</string>
-    <string name="accessibility_quick_settings_live_display_changed_auto">LiveDisplay changed to auto mode.</string>
-    <string name="accessibility_quick_settings_live_display_changed_day">LiveDisplay changed to day mode.</string>
-    <string name="accessibility_quick_settings_live_display_changed_night">LiveDisplay changed to night mode.</string>
-    <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveDisplay changed to outdoor mode.</string>
+    <string name="live_display_off_summary">Dezactivează toate ajustările</string>
+    <string name="live_display_day">Zi</string>
+    <string name="live_display_day_summary">Utilizați numai setările de zi</string>
+    <string name="live_display_night">Noapte</string>
+    <string name="live_display_night_summary">Utilizați doar setările de noapte</string>
+    <string name="live_display_outdoor">Exterior (soare puternic)</string>
+    <string name="live_display_outdoor_summary">Utilizați numai setările de exterior</string>
+    <string name="live_display_hint">LiveDisplay poate ajuta la reducerea oboselii ochilor și vă ajută să dormiți noaptea. Clic aici pentru a-l încerca!</string>
+    <string name="accessibility_quick_settings_live_display_off">LiveDisplay este oprit.</string>
+    <string name="accessibility_quick_settings_live_display_auto">LiveDisplay: mod automat.</string>
+    <string name="accessibility_quick_settings_live_display_day">LiveDisplay: mod zi.</string>
+    <string name="accessibility_quick_settings_live_display_night">LiveDisplay: mod noapte.</string>
+    <string name="accessibility_quick_settings_live_display_outdoor">LiveDisplay: mod exterior.</string>
+    <string name="accessibility_quick_settings_live_display_changed_off">LiveDisplay este oprit.</string>
+    <string name="accessibility_quick_settings_live_display_changed_auto">LiveDisplay s-a schimbat la modul automat.</string>
+    <string name="accessibility_quick_settings_live_display_changed_day">LiveDisplay s-a schimbat la modul zi.</string>
+    <string name="accessibility_quick_settings_live_display_changed_night">LiveDisplay s-a schimbat la modul noapte.</string>
+    <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveDisplay s-a schimbat la modul exterior.</string>
     <!-- Vendor mismatch fingerprint warning [CHAR LIMIT=NONE] -->
     <string name="system_error_vendorprint">Imaginea furnizorului dvs. nu se potrivește sistemului. Scrieți imaginea <xliff:g id="string">%s</xliff:g> pentru dispozitivul dvs</string>
     <!-- Settings Restart -->
-    <string name="settings_restart_title">Settings restart required</string>
-    <string name="settings_restart_message">For all changes to take effect, a Settings restart is required. Restart Settings now?</string>
+    <string name="settings_restart_title">Este necesară repornirea Setărilor</string>
+    <string name="settings_restart_message">Pentru ca toate modificările să aibă efect, este necesară o repornire a Setărilor. Reporniți Setările acum?</string>
     <!-- Aerr strings -->
-    <string name="aerr_disable">Disable app</string>
+    <string name="aerr_disable">Dezactivare aplicație</string>
     <!-- Button that opens the screen with details of an application error -->
-    <string name="aerr_show_details">Show details</string>
+    <string name="aerr_show_details">Afișare detalii</string>
     <!-- Parallel space badge -->
     <string name="parallel_space_badge_label">%1$s</string>
+    <!-- App lock -->
+    <string name="unlock_application">Unlock <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
+    <!-- Face unlock -->
+    <string name="face_unlock_disabled_idle">Face unlock disabled due to inactivity</string>
 </resources>
