--- a/packages/SystemUI/res/values-fa-rIR/spark_strings.xml
+++ b/packages/SystemUI/res/values-fa-rIR/spark_strings.xml
@@ -4,6 +4,8 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Name of the clock in status bar [CHAR LIMIT=30] -->
+    <string name="clock">ساعت</string>
     <!-- Screenshot delete action -->
     <!-- Label for UI element which allows deleting the screenshot [CHAR LIMIT=30] -->
     <string name="screenshot_delete_label">حذف</string>
@@ -66,14 +68,12 @@
     <string name="accessibility_quick_settings_onthego_changed_off">On-The-Go turned off</string>
     <string name="accessibility_quick_settings_onthego_changed_on">On-The-Go turned on</string>
     <!-- Text to use when the number in a notification info is too large -->
-    <!-- Name of the clock in status bar [CHAR LIMIT=30] -->
-    <string name="clock">ساعت</string>
     <!-- Kill button in notification guts -->
     <string name="force_stop_dlg_title">توقف اجباری؟</string>
     <string name="force_stop_dlg_text">اگر برنامه‌ای را به اجبار متوقف کنید، ممکن است درست کار نکند.</string>
     <string name="guts_force_close_app">بستن برنامه</string>
     <!-- AOD QS tile -->
-    <string name="quick_settings_aod_label">AOD</string>
+    <string name="quick_settings_aod_label">صفحه نمایش همیشه روشن</string>
     <string name="quick_settings_aod_on_charge_label">AOD on charge</string>
     <string name="quick_settings_aod_off_label">AOD off</string>
     <string name="quick_settings_aod_off_powersave_label">نمایشگر همیشه روشن، غیرفعال\nحالت ذخیره‌ی انرژی</string>
@@ -170,7 +170,7 @@
     <string name="quick_settings_sound_search_no_app">متاسفیم، ولی بدون برنامه جستجو موسیقی این قابلیت کار نمیکند.</string>
     <!-- Refresh Rate Tile -->
     <string name="refresh_rate_tile_label">نرخ تازه‌سازی</string>
-    <string name="refresh_rate_auto_mode_placeholder">        Auto (<xliff:g id="min_refresh_rate" example="60">%1$d</xliff:g> - <xliff:g id="max_refresh_rate" example="60">%2$d</xliff:g> Hz)
+    <string name="refresh_rate_auto_mode_placeholder">        خودکار (<xliff:g id="min_refresh_rate" example="60">%1$d</xliff:g> - <xliff:g id="max_refresh_rate" example="60">%2$d</xliff:g> هرتز)
     </string>
     <string name="refresh_rate_forced_mode_placeholder"><xliff:g id="refresh_rate" example="60">%1$d</xliff:g> Hz</string>
     <!-- Google Lens Screenshot string -->
@@ -202,19 +202,34 @@
     <string name="screenrecord_longer_timeout_switch_summary">محدود کردن اندازه ضبط به ۱۵ گیگابایت</string>
     <string name="screenrecord_skip_time_label">رد کردن زمان‌سنج</string>
     <string name="screenrecord_skip_time_summary">حذف صبر ۳ ثانیه‌ای</string>
-    <!-- Omnijaws Weather -->
-    <string name="omnijaws_service_error">خطا</string>
-    <string name="omnijaws_service_unkown">اطلاعات آب و هوا موجود نیست</string>
-    <string name="omnijaws_service_error_long">خطا در بارگیری اطلاعات آب و هوا</string>
-    <string name="omnijaws_service_disabled">سرویس غیرفعال است</string>
-    <string name="omnijaws_detail_header">آب و هوا</string>
-    <string name="omnijaws_label_default">آب و هوا</string>
-    <string name="omnijaws_current_text">هم‌اکنون</string>
-    <string name="omnijaws_package_not_available">OmniJaws در دسترس نیست</string>
-    <string name="omnijaws_service_last_update">آخرین به‌روزرسانی:</string>
+    <string name="screenrecord_hevc_switch_label">Enable HEVC</string>
     <!-- QS InternetDialog: Summary for how many devices are connected to the hotspot -->
     <plurals name="quick_settings_internet_hotspot_summary_num_devices">
-        <item quantity="one">%1$d دستگاه وصل است</item>
+        <item quantity="one">%d دستگاه وصل است</item>
         <item quantity="other">%d devices connected</item>
     </plurals>
+    <!-- Data usage panel -->
+    <string name="total_internet_usage">Total internet usage (Since boot)</string>
+    <string name="cellular_usage">مصرف اینترنت همراه</string>
+    <string name="wifi_usage">مصرف وای فای</string>
+    <!-- Screen pinning dialog description. (for devices without navbar) -->
+    <string name="screen_pinning_description_no_navbar">This keeps it in view until you unpin. Touch &amp; hold Back to unpin.</string>
+    <!-- Notify use that they are in Lock-to-app (for devices without navbar)-->
+    <string name="screen_pinning_toast_no_navbar">To unpin this screen, touch &amp; hold Back button</string>
+    <!-- Screen pinning dialog description. (for devices without navbar and with gestures on fingerprint sensor) -->
+    <string name="screen_pinning_description_no_navbar_fpsensor">This keeps it in view until you unpin. Touch &amp; hold fingerprint sensor to unpin.</string>
+    <!-- Notify use that they are in Lock-to-app (for devices without navbar and with gestures on fingerprint sensor)-->
+    <string name="screen_pinning_toast_no_navbar_fpsensor">To unpin this screen, touch &amp; hold fingerprint sensor</string>
+    <!-- Face Unlock -->
+    <string name="face_unlock_recognizing">Recognizing face...</string>
+    <!-- Bluetooth dialog -->
+    <string name="turn_on_bluetooth">استفاده از بلوتوث</string>
+    <string name="bluetooth_is_off">بلوتوث خاموش است</string>
+    <string name="tap_a_device_to_connect">برای اتصال به شبکه روی آن ضربه بزنید</string>
+    <string name="photos_not_allowed">این برنامه پشتیبانی نمی‌شود</string>
+    <!-- Preferred network tile -->
+    <string name="quick_settings_preferred_network_label">شبکه برتر</string>
+    <string name="quick_settings_preferred_network_lte">4g / LTE</string>
+    <string name="quick_settings_preferred_network_nr">5g / NR</string>
+    <string name="quick_settings_preferred_network_unsupported">پشتیبانی نشده</string>
 </resources>
